# PclSharp-NetCore

./: .gitignore  LICENSE  README.md
src/PclSharp.Managed/: PclSharp.sln
src/PclSharp.Managed/PclSharp/: PclBaseOfXYZ.generated.cs  PclBaseOfXYZRGBA.generated.cs  PclSharp.csproj  PointCloudOfNormal.generated.cs  PointCloudOfXYZ.generated.cs  PointCloudOfXYZL.generated.cs  PointCloudOfXYZRGBA.generated.cs  PointIndices.cs  PolygonMesh.cs
src/PclSharp.Managed/PclSharp.Test/: PclSharp.Test.csproj  PointCloudTests.cs
src/PclSharp.Managed/PclSharp.Test/Properties/: AssemblyInfo.cs
src/PclSharp.Managed/PclSharp.Vis/: PclSharp.Vis.csproj  Visualizer.cs
src/PclSharp.Managed/PclSharp.Vis/Properties/: AssemblyInfo.cs
src/PclSharp.Managed/PclSharp/Common/: ModelCoefficients.cs  PCA.cs  PCAOfXYZ.generated.cs
src/PclSharp.Managed/PclSharp/Eigen/: Matrix4.cs  VectorXf.cs
src/PclSharp.Managed/PclSharp/Features/: FPFHEstimation.cs  FPFHEstimationOfPointXYZAndNormal.generated.cs  IntegralImageNormalEstimationOfPointXYZAndNormal.generated.cs
src/PclSharp.Managed/PclSharp/Filters/: ExtractIndices.cs  ExtractIndicesOfXYZ.generated.cs  HeightMap2DOfXYZ.generated.cs  Heightmap2D.cs  StatisticalOutlierRemoval.cs  StatisticalOutlierRemovalOfXYZ.generated.cs  VoxelGrid.cs  VoxelGridOfXYZ.generated.cs
src/PclSharp.Managed/PclSharp/IO/: PCDReader.cs  PLYReader.cs  PLYWriter.cs
src/PclSharp.Managed/VisTest/: Program.cs  VisTest.csproj
src/PclSharp.Native/: CMakeLists.txt
src/PclSharp.Native/PclSharp.Extern/: CMakeLists.txt
src/PclSharp.Native/PclSharp.Extern/common/: ModelCoefficients.generated.cpp  PCAOfXYZ.generated.cpp  PclBaseOfXYZ.generated.cpp  PclBaseOfXYZRGBA.generated.cpp  PointIndices.generated.cpp
src/PclSharp.Native/PclSharp.Extern/eigen/: Matrix4f.generated.cpp  VectorXf.generated.cpp
src/PclSharp.Native/PclSharp.Extern/features/: FPFHEstimationOfPointXYZAndNormal.generated.cpp  IntegralImageNormalEstimationOfPointXYZAndNormal.generated.cpp
src/PclSharp.Native/PclSharp.Extern/filters/: ExtractIndicesXYZ.generated.cpp  HeightMap2D.hpp  Heightmap2DOfXYZ.generated.cpp  StatisticalOutlierRemovalOfXYZ.generated.cpp  VoxelGridOfXYZ.generated.cpp
src/PclSharp.Native/PclSharp.Extern/io/: PCDReader.generated.cpp  PLYReader.generated.cpp  PLYWriter.generated.cpp
src/PclSharp.Native/PclSharp.Extern/pointcloud/: PointCloudOfNormal.generated.cpp  PointCloudOfXYZ.generated.cpp  PointCloudOfXYZL.generated.cpp  PointCloudOfXYZRGBA.generated.cpp  PolygonMesh.generated.cpp
src/PclSharp.Native/PclSharp.Extern/registration/: TransformationEstimationPointToPlaneLLSOfPointNormal_PointNormal.generated.cpp  iterativeclosestpointofpointxyz_pointxyz.generated.cpp
src/PclSharp.Native/PclSharp.Extern/sampleconsensus/: SampleConsensusModelPlaneOfXYZ.generated.cpp
src/PclSharp.Native/PclSharp.Extern/search/: KdTreeOfXYZ.generated.cpp  OrganizedNeighborOfXYZ.generated.cpp
src/PclSharp.Native/PclSharp.Extern/segmentation/: CPCSegmentationOfXYZ.generated.cpp  EuclideanClusterExtractionOfXYZ.generated.cpp  LCCPSegmentationOfXYZ.generated.cpp  SACSegmentationOfXYZ.generated.cpp  SupervoxelClusteringOfXYZ.generated.cpp  SupervoxelClusteringOfXYZRGBA.generated.cpp  SupervoxelClustersOfXYZ.generated.cpp  SupervoxelClustersOfXYZRGBA.generated.cpp  SupervoxelOfXYZ.generated.cpp  SupervoxelOfXYZRGBA.generated.cpp
src/PclSharp.Native/PclSharp.Extern/std/: MultiMapOfuintAnduint.generated.cpp  VectorOfByte.generated.cpp  VectorOfFloat.generated.cpp  VectorOfInt.generated.cpp  VectorOfNormal.generated.cpp  VectorOfPointIndices.generated.cpp  VectorOfUInt.generated.cpp  VectorOfXYZ.generated.cpp  VectorOfXYZL.generated.cpp  VectorOfXYZRGBA.generated.cpp
src/PclSharp.Native/PclSharp.Extern/surface/: ConvexHullOfXYZ.generated.cpp
src/PclSharp.Native/PclSharp.ExternVis/: CMakeLists.txt  visualizer.h
(+42 files in other folders)
